--- a/clusters/production/config.yaml
+++ b/clusters/production/config.yaml
@@ -1,18 +1,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: databases
+  name: config
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: config
   interval: 1m0s
   retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./database/staging
+  path: ./config/production
   prune: true
   decryption:
     provider: sops
