--- a/clusters/production/databases.yaml
+++ b/clusters/production/databases.yaml
@@ -4,6 +4,8 @@ metadata:
   name: databases
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: config
   interval: 1m0s
   retryInterval: 1m
   timeout: 5m
