--- a/apps/production/rocketchat/kustomization.yaml
+++ b/apps/production/rocketchat/kustomization.yaml
@@ -2,6 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: rocketchat
 resources:
-  - config.yaml
-  - aws-backup-credentials.yaml
-  - database-users.yaml
+  - ../../base/rocketchat/
