--- a/apps/base/rocketchat/deployment.yaml
+++ b/apps/base/rocketchat/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             # - name: ROOT_URL
             #   value:
             - name: PORT
-              value: 3000
+              value: "3000"
             - name: DEPLOY_METHOD
               value: docker
             - name: REG_TOKEN
