debug: fix database for rocketchat in production

--- a/apps/base/rocketchat/deployment.yaml
+++ b/apps/base/rocketchat/deployment.yaml
@@ -55,7 +55,7 @@ spec:
                   key: MONGODB_USER_ADMIN_PASSWORD
             - name: MONGO_URL
               value: >-
-                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/admin?replicaSet=rs0&ssl=false
+                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/rocketchat?replicaSet=rs0&ssl=false
             - name: MONGO_OPLOG_URL
               value: >-
-                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/admin?replicaSet=rs0&ssl=false
+                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/rocketchat?replicaSet=rs0&ssl=false
