--- a/apps/base/rocketchat/deployment.yaml
+++ b/apps/base/rocketchat/deployment.yaml
@@ -58,4 +58,4 @@ spec:
                 mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/rocketchat?replicaSet=rs0&ssl=false
             - name: MONGO_OPLOG_URL
               value: >-
-                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/rocketchat?replicaSet=rs0&ssl=false
+                mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@rocketchat-db-production-cluster-v1-rs0.rocketchat.svc.cluster.local/local?replicaSet=rs0&ssl=false
