--- a/apps/production/linkding/cloudflare.yaml
+++ b/apps/production/linkding/cloudflare.yaml
@@ -32,6 +32,10 @@ spec:
             - --metrics
             - 0.0.0.0:2000
             - run
+          ports:
+            - name: metrics
+              containerPort: 2000
+              protocol: TCP
           livenessProbe:
             httpGet:
               # Cloudflared has a /ready endpoint which returns 200 if and only if
