debug: possible service monitor manifest fix

--- a/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
@@ -14,7 +14,7 @@ spec:
       - rocketchat
       - audiobookself
   endpoints:
-    - port: metrics
+    - port: 2000
       path: /metrics
       interval: 30s
       honorLabels: true
