--- a/config/production/rocketchat/kustomization.yaml
+++ b/config/production/rocketchat/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: rocketchat
 resources:
   - config.yaml
-  - aws-backup-credentials.yaml
+  - aws-backup-credentials.enc.yaml
   - database-users.yaml
