debug: testing out different cloudflared metrics pod selector

--- a/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      pod: cloudflared
+      pod: cloudflared-metrics
   namespaceSelector:
     matchNames:
       - linkding
