debug: testing label matching with service monitor

--- a/apps/production/linkding/cloudflare-service.yaml
+++ b/apps/production/linkding/cloudflare-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: cloudflared-metrics
   labels:
-    app: cloudflared
+    app: cloudflared-metrics
 spec:
   selector:
     pod: cloudflared
