--- a/apps/production/linkding/cloudflare.yaml
+++ b/apps/production/linkding/cloudflare.yaml
@@ -45,3 +45,19 @@ spec:
             failureThreshold: 1
             initialDelaySeconds: 10
             periodSeconds: 10
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: cloudflared-metrics
+  labels:
+    app: cloudflared-metrics
+spec:
+  selector:
+    pod: cloudflared
+  ports:
+    - name: metrics
+      port: 2000
+      targetPort: metrics
