fix: fixing namespace typo

--- a/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/cloudflared-service-monitor.yaml
@@ -12,7 +12,7 @@ spec:
     matchNames:
       - linkding
       - rocketchat
-      - audiobookself
+      - audiobookshelf
   endpoints:
     - port: "metrics"
       path: /metrics
