--- a/apps/production/rocketchat/kustomization.yaml
+++ b/apps/production/rocketchat/kustomization.yaml
@@ -4,4 +4,4 @@ namespace: rocketchat
 resources:
   - ../../base/rocketchat/
   - cloudflare-secret.yaml
-  - ../../../shared/cloudflared/cloudflared.yaml
+  - ../../../shared/cloudflared/
