feat: start using cloudflared shared manifest for audiobookshelf and linkding

--- a/apps/production/audiobookshelf/kustomization.yaml
+++ b/apps/production/audiobookshelf/kustomization.yaml
@@ -4,4 +4,4 @@ namespace: audiobookshelf
 resources:
   - ../../base/audiobookshelf/
   - cloudflare-secret.yaml
-  - cloudflare.yaml
+  - ../../../shared/cloudflared/
