--- a/config/staging/rocketchat/kustomization.yaml
+++ b/config/staging/rocketchat/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: rocketchat
 resources:
+  - namespace.yaml
   - aws-backup-credentials.yaml
   - database-users.yaml
 
