--- a/config/production/rocketchat/kustomization.yaml
+++ b/config/production/rocketchat/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: rocketchat
 resources:
+  - ../../base/rocketchat/
   - config.yaml
   - aws-backup-credentials.enc.yaml
   - database-users.yaml
