debug: modify n8n db storage config

--- a/database/base/n8n/database.yaml
+++ b/database/base/n8n/database.yaml
@@ -9,5 +9,10 @@ spec:
     enablePodMonitor: true
 
   storage:
-    size: 5Gi
-    storageClassName: "synology-iscsi"
+    pvcTemplate:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 5Gi
+      storageClassName: "synology-iscsi"
