--- a/database/base/n8n/database.yaml
+++ b/database/base/n8n/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: n8n-db-cluster-v1
+  name: n8n-db-production-cluster-v1
 spec:
   instances: 3
 
