--- a/database/production/n8n/kustomization.yaml
+++ b/database/production/n8n/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: n8n
 resources:
-  - n8n
-  - rocketchat
+  - ../../base/n8n/
+
