debug: make minecraft-server more secure

--- a/apps/base/minecraft-server/deployment.yaml
+++ b/apps/base/minecraft-server/deployment.yaml
@@ -13,11 +13,19 @@ spec:
       labels:
         app: minecraft
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
+
       containers:
         - name: minecraft
           image: itzg/minecraft-server:latest
           ports:
             - containerPort: 25565
+
+          securityContext:
+            allowPrivilegeEscalation: false
 
           envFrom:
             - configMapRef:
