--- a/apps/base/rocketchat/service.yaml
+++ b/apps/base/rocketchat/service.yaml
@@ -4,8 +4,12 @@ metadata:
   name: rocketchat
 spec:
   ports:
-    - port: 3000
-    - port: 9458
+    - name: http
+      port: 3000
+      targetPort: http
+    - name: metrics
+      port: 9458
+      targetPort: metrics
   selector:
     app: rocketchat
   type: ClusterIP
