--- a/apps/base/rocketchat/service.yaml
+++ b/apps/base/rocketchat/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rocketchat
+  labels:
+    app.kubernetes.io/instance: rocketchat-metrics
+    app.kubernetes.io/component: metrics
 spec:
   ports:
     - name: http
@@ -13,3 +16,24 @@ spec:
   selector:
     app: rocketchat
   type: ClusterIP
+
+---
+
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: rocketchat-servicemonitor
+  namespace: monitoring
+spec:
+  namespaceSelector:
+    matchNames:
+      - rocketchat
+  selector:
+    matchLabels:
+      app.kubernetes.io/instance: rocketchat-metrics
+      app.kubernetes.io/component: metrics
+  endpoints:
+  - port: metrics
+    interval: 30s
+
+
