debug: adding a cluster label to the rocketchat metrics

--- a/apps/base/rocketchat/service.yaml
+++ b/apps/base/rocketchat/service.yaml
@@ -35,5 +35,8 @@ spec:
   endpoints:
   - port: metrics
     interval: 30s
+    relabelings:
+      - targetLabel: cluster
+        replacement: "production"
 
 
