--- a/apps/base/rocketchat/service.yaml
+++ b/apps/base/rocketchat/service.yaml
@@ -38,5 +38,7 @@ spec:
     relabelings:
       - targetLabel: cluster
         replacement: "production"
+      - targetLabel: tenant_id
+        replacement: "production"
 
 
