--- a/monitoring/configs/base/dashboards/kustomization.yaml
+++ b/monitoring/configs/base/dashboards/kustomization.yaml
@@ -7,6 +7,7 @@ configMapGenerator:
       - extra-dashboards/cloudflared.json
       - extra-dashboards/edb-postgres.json
       - extra-dashboards/mongodb-overview.json
+      - extra-dashboards/rocketchat.json
       - extra-dashboards/testing-mongodb.json
     options:
       labels:
