--- a/database/base/pgadmin/kustomization.yaml
+++ b/database/base/pgadmin/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - n8n
-  - pgadmin
-  # - linkding
-  # - rocketchat
+  - namespace.yaml
+  - configmap.yaml
+  - deployment.yaml
+  - storage.yaml
