--- a/database/staging/pgadmin/kustomization.yaml
+++ b/database/staging/pgadmin/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: pgadmin
 resources:
-  - n8n
-  - pgadmin
-  # - linkding
-  # - rocketchat
+  - ../../base/pgadmin/
+  - secret.enc.yaml
