--- a/database/base/pgadmin/kustomization.yaml
+++ b/database/base/pgadmin/kustomization.yaml
@@ -5,4 +5,6 @@ resources:
   - configmap.yaml
   - deployment.yaml
   - storage.yaml
-  - service.yaml
+  # - service.yaml
+  - ssl-certificate.yaml
+  - ingress.yaml
