--- a/database/staging/pgadmin/kustomization.yaml
+++ b/database/staging/pgadmin/kustomization.yaml
@@ -4,3 +4,12 @@ namespace: pgadmin
 resources:
   - ../../base/pgadmin/
   - secret.enc.yaml
+
+patches:
+  - target:
+      kind: Certificate
+      name: grafana-certificate
+    patch: |-
+      - op: replace
+        path: /spec/dnsNames/0
+        value: grafana-staging.colddev.net
