feat: set initial user for n8n db and disable n8n databases

--- a/database/staging/pgadmin/kustomization.yaml
+++ b/database/staging/pgadmin/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: pgadmin
 resources:
   - ../../base/pgadmin/
-  - secret.enc.yaml
+  - secret-configmap.enc.yaml
 
 patches:
   - target:
