--- a/database/base/n8n/database.yaml
+++ b/database/base/n8n/database.yaml
@@ -5,6 +5,13 @@ metadata:
 spec:
   instances: 3
 
+  bootstrap:
+    initdb:
+      database: n8n
+      owner: n8n
+      secret:
+        name: n8n-db-app-user-secret
+
   monitoring:
     enablePodMonitor: true
 
@@ -14,5 +21,5 @@ spec:
         - ReadWriteOnce
       resources:
         requests:
-          storage: 5Gi
+          storage: 2Gi
       storageClassName: "synology-iscsi"
