--- a/database/base/pgadmin/deployment.yaml
+++ b/database/base/pgadmin/deployment.yaml
@@ -33,7 +33,7 @@ spec:
             - configMapRef:
                 name: pgadmin-configmap
             - secretRef:
-                name: pgadmin-db-secret
+                name: pgadmin-configmap-secret
 
           volumeMounts:
             - mountPath: /var/lib/pgadmin
