feat: use retained iscsi storage class for prod n8n db

--- a/database/staging/n8n/kustomization.yaml
+++ b/database/staging/n8n/kustomization.yaml
@@ -16,3 +16,6 @@ patches:
       - op: replace
         path: /metadata/name
         value: n8n-db-staging-cluster-v1
+      - op: replace
+        path: /spec/storage/pvcTemplate/storageClassName
+        value: synology-iscsi
