--- a/database/base/n8n/database.yaml
+++ b/database/base/n8n/database.yaml
@@ -22,4 +22,4 @@ spec:
       resources:
         requests:
           storage: 2Gi
-      storageClassName: "synology-iscsi"
+      storageClassName: "synology-iscsi-retain"
