refactor: remove cloudflared manifests in favor of shared manifest

--- a/apps/production/linkding/kustomization.yaml
+++ b/apps/production/linkding/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: linkding
 resources:
   - ../../base/linkding/
-  - cloudflare-secret.yaml
+  - cloudflare-secret.enc.yaml
   - ../../../shared/cloudflared/
   - secret.yaml
