--- a/apps/production/audiobookshelf/kustomization.yaml
+++ b/apps/production/audiobookshelf/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: audiobookshelf
 resources:
   - ../../base/audiobookshelf/
-  - cloudflare-secret.yaml
+  - cloudflare-secret.enc.yaml
   - ../../../shared/cloudflared/
