--- a/apps/production/rocketchat/kustomization.yaml
+++ b/apps/production/rocketchat/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: rocketchat
 resources:
   - ../../base/rocketchat/
-  - cloudflare-secret.yaml
+  - cloudflare-secret.enc.yaml
   - ../../../shared/cloudflared/
