--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: linkding
 resources:
   - ../../base/linkding/
-  - cloudflare-secret.yaml
-  - cloudflare.yaml
-  - secret.yaml
+  - cloudflare-secret.enc.yaml
+  - ../../../shared/cloudflared/
+  - secret.enc.yaml
