feat: adding cloudflared to n8n staging

--- a/apps/staging/n8n/kustomization.yaml
+++ b/apps/staging/n8n/kustomization.yaml
@@ -4,6 +4,8 @@ namespace: n8n
 resources:
   - ../../base/n8n/
   - secret-configmap.enc.yaml
+  - cloudflare-secret.enc.yaml
+  - ../../../shared/cloudflared/
 
 patches:
   - target:
