debug: adding shared aws backup credentials to rocketchat

--- a/config/production/rocketchat/kustomization.yaml
+++ b/config/production/rocketchat/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: rocketchat
 resources:
   - ../../base/rocketchat/
+  - ../aws/
   - config.yaml
   - aws-backup-credentials.enc.yaml
   - database-users.yaml
