--- a/config/production/aws/kustomization.yaml
+++ b/config/production/aws/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - aws-backup-credentials.yaml
+  - aws-backup-credentials.enc.yaml
