--- a/database/staging/n8n/kustomization.yaml
+++ b/database/staging/n8n/kustomization.yaml
@@ -19,3 +19,20 @@ patches:
       - op: replace
         path: /spec/storage/pvcTemplate/storageClassName
         value: synology-iscsi
+      - op: replace
+        path: /spec/backup/barmanObjectStore/destinationPath
+        value: s3://staging-backup-n8n-db
+      - op: replace
+        path: /spec/externalClusters/0/barmanObjectStore/destinationPath
+        value: s3://staging-backup-n8n-db
+      - op: replace
+        path: /spec/externalClusters/0/barmanObjectStore/serverName
+        value: n8n-db-staging-cluster-v1
+
+  - target:
+      kind: ScheduledBackup
+      name: n8n-db-backup
+    patch: |-
+      - op: replace
+        path: /spec/cluster/name
+        value: n8n-db-staging-cluster-v1
