debug: alter the n8n backup path

--- a/database/staging/n8n/kustomization.yaml
+++ b/database/staging/n8n/kustomization.yaml
@@ -21,7 +21,7 @@ patches:
         value: synology-iscsi
       - op: replace
         path: /spec/backup/barmanObjectStore/destinationPath
-        value: s3://staging-backup-n8n-db
+        value: s3://staging-backup-n8n-db/current
       - op: replace
         path: /spec/externalClusters/0/barmanObjectStore/destinationPath
         value: s3://staging-backup-n8n-db
