--- a/apps/production/browserless/kustomization.yaml
+++ b/apps/production/browserless/kustomization.yaml
@@ -1,8 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: browserless
 resources:
-  - audiobookshelf
-  - linkding
-  - rocketchat
-  - n8n
-  - browserless
+  - ../../base/browserless/
