chore: configure browerless production instance

--- a/apps/base/browserless/deployment.yaml
+++ b/apps/base/browserless/deployment.yaml
@@ -26,6 +26,12 @@ spec:
           securityContext:
             allowPrivilegeEscalation: false
 
+          envFrom:
+            - configMapRef:
+                name: browserless-configmap
+            - secretRef:
+                name: browserless-configmap-secret
+
           ports:
             - containerPort: 3000
               protocol: TCP
