fix: add service and fix browserless configmap typo

--- a/apps/base/browserless/configmap.yaml
+++ b/apps/base/browserless/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: browerless-configmap
+  name: browserless-configmap
 data:
   QUEUED: "10"
   TIMEOUT: "30000"
