--- a/config/base/colddev/kustomization.yaml
+++ b/config/base/colddev/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - n8n
-  - rocketchat
-  - colddev
+  - namespace.yaml
+
