--- a/database/production/colddev/kustomization.yaml
+++ b/database/production/colddev/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: colddev
 resources:
-  - n8n
-  - rocketchat
-  - colddev
+  - ../../base/colddev/
+  - secret-app-user.enc.yaml
