fix: remove recovery config

--- a/database/base/colddev/database.yaml
+++ b/database/base/colddev/database.yaml
@@ -11,12 +11,12 @@ spec:
       owner: colddev
       secret:
         name: colddev-db-app-user-secret
-    recovery:
-      source: clusterBackup
-      database: colddev
-      owner: colddev
-      secret:
-        name: colddev-db-app-user-secret
+    # recovery:
+    #   source: clusterBackup
+    #   database: colddev
+    #   owner: colddev
+    #   secret:
+    #     name: colddev-db-app-user-secret
 
   backup:
     barmanObjectStore:
