--- a/apps/base/n8n/deployment.yaml
+++ b/apps/base/n8n/deployment.yaml
@@ -5,10 +5,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-    type: RollingUpdate
+    type: Recreate
   selector:
     matchLabels:
       app: n8n
