fix: add n8n data pruning and saving configuration

--- a/apps/base/n8n/configmap.yaml
+++ b/apps/base/n8n/configmap.yaml
@@ -11,3 +11,9 @@ data:
   DB_POSTGRESDB_DATABASE: "n8n"
   N8N_SECURE_COOKIE: "false"
   GENERIC_TIMEZONE: "Europe/Tallinn"
+  EXECUTIONS_DATA_SAVE_ON_ERROR: "all"
+  EXECUTIONS_DATA_SAVE_ON_SUCCESS: "none"
+  EXECUTIONS_DATA_SAVE_ON_PROGRESS: "true"
+  EXECUTIONS_DATA_SAVE_MANUAL_EXECUTIONS: "false"
+  EXECUTIONS_DATA_MAX_AGE: "48"
+  EXECUTIONS_DATA_PRUNE_MAX_COUNT: "50"
