debug: remove pitr from rocketchat db backup

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -18,6 +18,8 @@ spec:
   backup:
     enabled: true
     image: percona/percona-backup-mongodb:2.11.0
+    pitr:
+      enabled: false
     storages:
       s3-stockholm:
         type: s3
