--- a/infrastructure/controllers/base/registry/deployment.yaml
+++ b/infrastructure/controllers/base/registry/deployment.yaml
@@ -21,6 +21,8 @@ spec:
           env:
             - name: REGISTRY_STORAGE_DELETE_ENABLED
               value: "true"
+            - name: OTEL_TRACES_EXPORTER
+              value: "none"
           volumeMounts:
             - name: registry-storage
               mountPath: /var/lib/registry
