--- a/infrastructure/controllers/base/registry/deployment.yaml
+++ b/infrastructure/controllers/base/registry/deployment.yaml
@@ -23,6 +23,8 @@ spec:
               value: "true"
             - name: OTEL_TRACES_EXPORTER
               value: "none"
+            - name: REGISTRY_LOG_LEVEL
+              value: "info"
           volumeMounts:
             - name: registry-storage
               mountPath: /var/lib/registry
