--- a/apps/staging/testbox/kustomization.yaml
+++ b/apps/staging/testbox/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: testbox
 resources:
-  - linkding
-  - audiobookshelf
-  - minecraft-server
-  - n8n
-  - testbox
+  - namespace.yaml
+  - deployment.yaml
