debug: change proxy address of mirror registry

--- a/infrastructure/controllers/staging/registry/kustomization.yaml
+++ b/infrastructure/controllers/staging/registry/kustomization.yaml
@@ -20,4 +20,4 @@ patches:
               - name: registry
                 env:
                   - name: REGISTRY_PROXY_REMOTEURL
-                    value: https://192.168.88.196
+                    value: https://registry.colddev.net
