--- a/apps/base/minecraft-server/storage.yaml
+++ b/apps/base/minecraft-server/storage.yaml
@@ -9,3 +9,17 @@ spec:
   resources:
     requests:
       storage: 5Gi
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: minecraft-home-creative-data-pvc
+spec:
+  storageClassName: "synology-iscsi"
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
