--- a/apps/base/minecraft-server/deployment.yaml
+++ b/apps/base/minecraft-server/deployment.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: minecraft
-          image: itzg/minecraft-server:2025.10.5
+          image: itzg/minecraft-server:latest
           ports:
             - containerPort: 25565
 
