--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rocketchat-db-production-cluster-v1
 spec:
   crVersion: 1.20.1
-  image: percona/percona-server-mongodb:7.0.28-15
+  image: percona/percona-server-mongodb:8.0
   unsafeFlags:
     replsetSize: true
     mongosSize: true
